[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Machine.gd" type="Script" id=1]
[ext_resource path="res://Assets/Machines/machine_importer.png" type="Texture" id=2]
[ext_resource path="res://Assets/machine_import_arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/machine_export_arrow.png" type="Texture" id=4]
[ext_resource path="res://Assets/machine_import_arrow_2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

[node name="Machine" type="Node2D"]
scale = Vector2( 0.78, 0.78 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Product_Spawn_Point" type="Node2D" parent="."]

[node name="Input Button 1" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="Input Button 1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Input Button 1/Area2D"]
shape = SubResource( 1 )

[node name="Input Button 2" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Input Button 2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Input Button 2/Area2D"]
shape = SubResource( 1 )

[node name="Output Button 1" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Output Button 1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Output Button 1/Area2D"]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="Input Button 1/Area2D" to="." method="_on_input_button_1_mouse_entered"]
[connection signal="mouse_exited" from="Input Button 1/Area2D" to="." method="_on_input_button_1_mouse_exited"]
[connection signal="mouse_entered" from="Input Button 2/Area2D" to="." method="_on_input_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Input Button 2/Area2D" to="." method="_on_input_button_2_mouse_exited"]
[connection signal="mouse_entered" from="Output Button 1/Area2D" to="." method="_on_output_button_1_mouse_entered"]
[connection signal="mouse_exited" from="Output Button 1/Area2D" to="." method="_on_output_button_1_mouse_exited"]
